--- a/private.plist.example
+++ b/private.plist.example
@@ -3,10 +3,11 @@
 <plist version="1.0">
 <dict>
 	<key>RottenTomatoes</key>
-	<dict/>
-	<key>application</key>
-	<string>YOUR_APP_NAME</string>
-	<key>key</key>
-	<string>YOUR_KEY</string>
+    <dict>
+        <key>application</key>
+        <string>YOUR_APP_NAME</string>
+        <key>key</key>
+        <string>YOUR_KEY</string>
+    </dict>
 </dict>
 </plist>
